OpafProjectVfMods/force-app/main/default/objects/Account/fields/Billing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_2__c</fullName>
    <label>Billing_Address_Line_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>