OpafProjectVfMods/force-app/main/default/objects/Account/fields/Facility_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Fax__c</fullName>
    <label>Facility Contact Fax</label>
    <type>Phone</type>
</CustomField>