OpafProjectVfMods/force-app/main/default/objects/Account/fields/Facility_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_First_Name__c</fullName>
    <label>Facility Contact First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>