OpafProjectVfMods/force-app/main/default/objects/Account/fields/Facility_Contact_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Phone_Extension__c</fullName>
    <label>Facility Contact Phone Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>