OpafProjectVfMods/force-app/main/default/objects/Account/listViews/Facility.listView-meta.xml
<ListView>
    <fullName>Facility</fullName>
    <columns>External_Facility_Id__c</columns>
    <columns>Is_Primary__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Facility_Type__c</columns>
    <columns>Street_Address__c</columns>
    <columns>Address_Line_2__c</columns>
    <columns>City__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Facility</value>
    </filters>
    <label>Facility</label>
</ListView>